# Women-Safety

Frontend/: package-lock.json
Frontend/chatbot/: main.py  pyproject.toml
Frontend/chatbot/database/: __init__.py  db.py  models.py  safeher.db
Frontend/chatbot/telegram_bot/: bot.py  orchestrator.py  rag_connector.py  setup_agent.py  sos_agent.py
Frontend/my-app/: package-lock.json  package.json
Frontend/my-app/src/: App.jsx
Frontend/my-app/src/components/: ModeToggle.jsx  Navbar.jsx  Telegram.jsx  ui.jsx
Frontend/my-app/src/pages/: About.jsx  Chatbot.jsx  Home.jsx  HomePage.jsx
