[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "langchain-text-splitters>=1.1.2",
    "mistralai>=2.5.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
